@@ -1,6 +1,7 @@
 Revision history for exact::class
 
 {{$NEXT}}
+        - Inject Class::Method::Modifiers when using class
 
 1.08      2020-04-23 07:44:57-07:00 America/Los_Angeles
         - Allow code ref refs as a means of using callback attributes repeately
